// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ProgressSteps - Snapshots > matches snapshot for ProgressSteps with custom className 1`] = `
<div
  class="mx-auto w-full flex-col hidden lg:flex items-center gap-4 mt-1 flex-1 sticky top-0 z-10 bg-background custom-progress"
  data-testid="container"
>
  <div
    class="mx-auto w-full flex items-center gap-0 flex-row"
    data-testid="container"
  >
    <div
      class="mx-auto w-full flex items-center flex-row"
      data-testid="container"
    >
      <div
        class="mx-auto flex-col flex items-center justify-center w-8 h-8 rounded-full font-bold transition-all duration-500 ease-in-out transform border bg-transparent text-white border-white"
        data-testid="container"
      >
        <div
          class="mx-auto w-full flex-col transition-all ease-in-out flex items-center justify-center animate-in fade-in zoom-in duration-500"
          data-testid="container"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-check"
            fill="none"
            height="16"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 6 9 17l-5-5"
            />
          </svg>
        </div>
      </div>
      <div
        class="mx-auto flex-col flex relative w-28 xl:w-40 h-px overflow-hidden"
        data-testid="container"
      >
        <div
          class="mx-auto w-full flex-col flex absolute inset-0 bg-border opacity-50"
          data-testid="container"
        />
        <div
          class="mx-auto w-full flex-col flex absolute inset-0 bg-white transform transition-all duration-500 ease-out translate-x-0"
          data-testid="container"
        />
      </div>
    </div>
    <div
      class="mx-auto w-full flex items-center flex-row"
      data-testid="container"
    >
      <div
        class="mx-auto flex-col flex items-center justify-center w-8 h-8 rounded-full font-bold transition-all duration-500 ease-in-out transform bg-foreground text-background"
        data-testid="container"
      >
        <div
          class="mx-auto w-full flex-col transition-all duration-500 ease-in-out flex items-center justify-center"
          data-testid="container"
        >
          2
        </div>
      </div>
      <div
        class="mx-auto flex-col flex relative w-28 xl:w-40 h-px overflow-hidden"
        data-testid="container"
      >
        <div
          class="mx-auto w-full flex-col flex absolute inset-0 bg-border opacity-50"
          data-testid="container"
        />
        <div
          class="mx-auto w-full flex-col flex absolute inset-0 bg-white transform transition-all duration-500 ease-out -translate-x-full"
          data-testid="container"
        />
      </div>
    </div>
    <div
      class="mx-auto w-full flex items-center flex-row"
      data-testid="container"
    >
      <div
        class="mx-auto flex-col flex items-center justify-center w-8 h-8 rounded-full font-bold transition-all duration-500 ease-in-out transform border text-muted-foreground"
        data-testid="container"
      >
        <div
          class="mx-auto w-full flex-col transition-all duration-500 ease-in-out flex items-center justify-center"
          data-testid="container"
        >
          3
        </div>
      </div>
      <div
        class="mx-auto flex-col flex relative w-28 xl:w-40 h-px overflow-hidden"
        data-testid="container"
      >
        <div
          class="mx-auto w-full flex-col flex absolute inset-0 bg-border opacity-50"
          data-testid="container"
        />
        <div
          class="mx-auto w-full flex-col flex absolute inset-0 bg-white transform transition-all duration-500 ease-out -translate-x-full"
          data-testid="container"
        />
      </div>
    </div>
    <div
      class="mx-auto w-full flex items-center flex-row"
      data-testid="container"
    >
      <div
        class="mx-auto flex-col flex items-center justify-center w-8 h-8 rounded-full font-bold transition-all duration-500 ease-in-out transform border text-muted-foreground"
        data-testid="container"
      >
        <div
          class="mx-auto w-full flex-col transition-all duration-500 ease-in-out flex items-center justify-center"
          data-testid="container"
        >
          4
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ProgressSteps - Snapshots > matches snapshot for ProgressSteps with final step 1`] = `
<div
  class="mx-auto w-full flex-col hidden lg:flex items-center gap-4 mt-1 flex-1 sticky top-0 z-10 bg-background"
  data-testid="container"
>
  <div
    class="mx-auto w-full flex items-center gap-0 flex-row"
    data-testid="container"
  >
    <div
      class="mx-auto w-full flex items-center flex-row"
      data-testid="container"
    >
      <div
        class="mx-auto flex-col flex items-center justify-center w-8 h-8 rounded-full font-bold transition-all duration-500 ease-in-out transform border bg-transparent text-white border-white"
        data-testid="container"
      >
        <div
          class="mx-auto w-full flex-col transition-all ease-in-out flex items-center justify-center animate-in fade-in zoom-in duration-500"
          data-testid="container"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-check"
            fill="none"
            height="16"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 6 9 17l-5-5"
            />
          </svg>
        </div>
      </div>
      <div
        class="mx-auto flex-col flex relative w-28 xl:w-40 h-px overflow-hidden"
        data-testid="container"
      >
        <div
          class="mx-auto w-full flex-col flex absolute inset-0 bg-border opacity-50"
          data-testid="container"
        />
        <div
          class="mx-auto w-full flex-col flex absolute inset-0 bg-white transform transition-all duration-500 ease-out translate-x-0"
          data-testid="container"
        />
      </div>
    </div>
    <div
      class="mx-auto w-full flex items-center flex-row"
      data-testid="container"
    >
      <div
        class="mx-auto flex-col flex items-center justify-center w-8 h-8 rounded-full font-bold transition-all duration-500 ease-in-out transform border bg-transparent text-white border-white"
        data-testid="container"
      >
        <div
          class="mx-auto w-full flex-col transition-all ease-in-out flex items-center justify-center animate-in fade-in zoom-in duration-500"
          data-testid="container"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-check"
            fill="none"
            height="16"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 6 9 17l-5-5"
            />
          </svg>
        </div>
      </div>
      <div
        class="mx-auto flex-col flex relative w-28 xl:w-40 h-px overflow-hidden"
        data-testid="container"
      >
        <div
          class="mx-auto w-full flex-col flex absolute inset-0 bg-border opacity-50"
          data-testid="container"
        />
        <div
          class="mx-auto w-full flex-col flex absolute inset-0 bg-white transform transition-all duration-500 ease-out translate-x-0"
          data-testid="container"
        />
      </div>
    </div>
    <div
      class="mx-auto w-full flex items-center flex-row"
      data-testid="container"
    >
      <div
        class="mx-auto flex-col flex items-center justify-center w-8 h-8 rounded-full font-bold transition-all duration-500 ease-in-out transform border bg-transparent text-white border-white"
        data-testid="container"
      >
        <div
          class="mx-auto w-full flex-col transition-all ease-in-out flex items-center justify-center animate-in fade-in zoom-in duration-500"
          data-testid="container"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-check"
            fill="none"
            height="16"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 6 9 17l-5-5"
            />
          </svg>
        </div>
      </div>
      <div
        class="mx-auto flex-col flex relative w-28 xl:w-40 h-px overflow-hidden"
        data-testid="container"
      >
        <div
          class="mx-auto w-full flex-col flex absolute inset-0 bg-border opacity-50"
          data-testid="container"
        />
        <div
          class="mx-auto w-full flex-col flex absolute inset-0 bg-white transform transition-all duration-500 ease-out translate-x-0"
          data-testid="container"
        />
      </div>
    </div>
    <div
      class="mx-auto w-full flex items-center flex-row"
      data-testid="container"
    >
      <div
        class="mx-auto flex-col flex items-center justify-center w-8 h-8 rounded-full font-bold transition-all duration-500 ease-in-out transform border bg-transparent text-white border-white"
        data-testid="container"
      >
        <div
          class="mx-auto w-full flex-col transition-all ease-in-out flex items-center justify-center animate-in fade-in zoom-in duration-500"
          data-testid="container"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-check"
            fill="none"
            height="16"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 6 9 17l-5-5"
            />
          </svg>
        </div>
      </div>
      <div
        class="mx-auto flex-col flex relative w-28 xl:w-40 h-px overflow-hidden"
        data-testid="container"
      >
        <div
          class="mx-auto w-full flex-col flex absolute inset-0 bg-border opacity-50"
          data-testid="container"
        />
        <div
          class="mx-auto w-full flex-col flex absolute inset-0 bg-white transform transition-all duration-500 ease-out translate-x-0"
          data-testid="container"
        />
      </div>
    </div>
    <div
      class="mx-auto w-full flex items-center flex-row"
      data-testid="container"
    >
      <div
        class="mx-auto flex-col flex items-center justify-center w-8 h-8 rounded-full font-bold transition-all duration-500 ease-in-out transform bg-foreground text-background"
        data-testid="container"
      >
        <div
          class="mx-auto w-full flex-col transition-all duration-500 ease-in-out flex items-center justify-center"
          data-testid="container"
        >
          5
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ProgressSteps - Snapshots > matches snapshot for ProgressSteps with initial step 1`] = `
<div
  class="mx-auto w-full flex-col hidden lg:flex items-center gap-4 mt-1 flex-1 sticky top-0 z-10 bg-background"
  data-testid="container"
>
  <div
    class="mx-auto w-full flex items-center gap-0 flex-row"
    data-testid="container"
  >
    <div
      class="mx-auto w-full flex items-center flex-row"
      data-testid="container"
    >
      <div
        class="mx-auto flex-col flex items-center justify-center w-8 h-8 rounded-full font-bold transition-all duration-500 ease-in-out transform bg-foreground text-background"
        data-testid="container"
      >
        <div
          class="mx-auto w-full flex-col transition-all duration-500 ease-in-out flex items-center justify-center"
          data-testid="container"
        >
          1
        </div>
      </div>
      <div
        class="mx-auto flex-col flex relative w-28 xl:w-40 h-px overflow-hidden"
        data-testid="container"
      >
        <div
          class="mx-auto w-full flex-col flex absolute inset-0 bg-border opacity-50"
          data-testid="container"
        />
        <div
          class="mx-auto w-full flex-col flex absolute inset-0 bg-white transform transition-all duration-500 ease-out -translate-x-full"
          data-testid="container"
        />
      </div>
    </div>
    <div
      class="mx-auto w-full flex items-center flex-row"
      data-testid="container"
    >
      <div
        class="mx-auto flex-col flex items-center justify-center w-8 h-8 rounded-full font-bold transition-all duration-500 ease-in-out transform border text-muted-foreground"
        data-testid="container"
      >
        <div
          class="mx-auto w-full flex-col transition-all duration-500 ease-in-out flex items-center justify-center"
          data-testid="container"
        >
          2
        </div>
      </div>
      <div
        class="mx-auto flex-col flex relative w-28 xl:w-40 h-px overflow-hidden"
        data-testid="container"
      >
        <div
          class="mx-auto w-full flex-col flex absolute inset-0 bg-border opacity-50"
          data-testid="container"
        />
        <div
          class="mx-auto w-full flex-col flex absolute inset-0 bg-white transform transition-all duration-500 ease-out -translate-x-full"
          data-testid="container"
        />
      </div>
    </div>
    <div
      class="mx-auto w-full flex items-center flex-row"
      data-testid="container"
    >
      <div
        class="mx-auto flex-col flex items-center justify-center w-8 h-8 rounded-full font-bold transition-all duration-500 ease-in-out transform border text-muted-foreground"
        data-testid="container"
      >
        <div
          class="mx-auto w-full flex-col transition-all duration-500 ease-in-out flex items-center justify-center"
          data-testid="container"
        >
          3
        </div>
      </div>
      <div
        class="mx-auto flex-col flex relative w-28 xl:w-40 h-px overflow-hidden"
        data-testid="container"
      >
        <div
          class="mx-auto w-full flex-col flex absolute inset-0 bg-border opacity-50"
          data-testid="container"
        />
        <div
          class="mx-auto w-full flex-col flex absolute inset-0 bg-white transform transition-all duration-500 ease-out -translate-x-full"
          data-testid="container"
        />
      </div>
    </div>
    <div
      class="mx-auto w-full flex items-center flex-row"
      data-testid="container"
    >
      <div
        class="mx-auto flex-col flex items-center justify-center w-8 h-8 rounded-full font-bold transition-all duration-500 ease-in-out transform border text-muted-foreground"
        data-testid="container"
      >
        <div
          class="mx-auto w-full flex-col transition-all duration-500 ease-in-out flex items-center justify-center"
          data-testid="container"
        >
          4
        </div>
      </div>
      <div
        class="mx-auto flex-col flex relative w-28 xl:w-40 h-px overflow-hidden"
        data-testid="container"
      >
        <div
          class="mx-auto w-full flex-col flex absolute inset-0 bg-border opacity-50"
          data-testid="container"
        />
        <div
          class="mx-auto w-full flex-col flex absolute inset-0 bg-white transform transition-all duration-500 ease-out -translate-x-full"
          data-testid="container"
        />
      </div>
    </div>
    <div
      class="mx-auto w-full flex items-center flex-row"
      data-testid="container"
    >
      <div
        class="mx-auto flex-col flex items-center justify-center w-8 h-8 rounded-full font-bold transition-all duration-500 ease-in-out transform border text-muted-foreground"
        data-testid="container"
      >
        <div
          class="mx-auto w-full flex-col transition-all duration-500 ease-in-out flex items-center justify-center"
          data-testid="container"
        >
          5
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ProgressSteps - Snapshots > matches snapshot for ProgressSteps with middle step 1`] = `
<div
  class="mx-auto w-full flex-col hidden lg:flex items-center gap-4 mt-1 flex-1 sticky top-0 z-10 bg-background"
  data-testid="container"
>
  <div
    class="mx-auto w-full flex items-center gap-0 flex-row"
    data-testid="container"
  >
    <div
      class="mx-auto w-full flex items-center flex-row"
      data-testid="container"
    >
      <div
        class="mx-auto flex-col flex items-center justify-center w-8 h-8 rounded-full font-bold transition-all duration-500 ease-in-out transform border bg-transparent text-white border-white"
        data-testid="container"
      >
        <div
          class="mx-auto w-full flex-col transition-all ease-in-out flex items-center justify-center animate-in fade-in zoom-in duration-500"
          data-testid="container"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-check"
            fill="none"
            height="16"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 6 9 17l-5-5"
            />
          </svg>
        </div>
      </div>
      <div
        class="mx-auto flex-col flex relative w-28 xl:w-40 h-px overflow-hidden"
        data-testid="container"
      >
        <div
          class="mx-auto w-full flex-col flex absolute inset-0 bg-border opacity-50"
          data-testid="container"
        />
        <div
          class="mx-auto w-full flex-col flex absolute inset-0 bg-white transform transition-all duration-500 ease-out translate-x-0"
          data-testid="container"
        />
      </div>
    </div>
    <div
      class="mx-auto w-full flex items-center flex-row"
      data-testid="container"
    >
      <div
        class="mx-auto flex-col flex items-center justify-center w-8 h-8 rounded-full font-bold transition-all duration-500 ease-in-out transform border bg-transparent text-white border-white"
        data-testid="container"
      >
        <div
          class="mx-auto w-full flex-col transition-all ease-in-out flex items-center justify-center animate-in fade-in zoom-in duration-500"
          data-testid="container"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-check"
            fill="none"
            height="16"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 6 9 17l-5-5"
            />
          </svg>
        </div>
      </div>
      <div
        class="mx-auto flex-col flex relative w-28 xl:w-40 h-px overflow-hidden"
        data-testid="container"
      >
        <div
          class="mx-auto w-full flex-col flex absolute inset-0 bg-border opacity-50"
          data-testid="container"
        />
        <div
          class="mx-auto w-full flex-col flex absolute inset-0 bg-white transform transition-all duration-500 ease-out translate-x-0"
          data-testid="container"
        />
      </div>
    </div>
    <div
      class="mx-auto w-full flex items-center flex-row"
      data-testid="container"
    >
      <div
        class="mx-auto flex-col flex items-center justify-center w-8 h-8 rounded-full font-bold transition-all duration-500 ease-in-out transform bg-foreground text-background"
        data-testid="container"
      >
        <div
          class="mx-auto w-full flex-col transition-all duration-500 ease-in-out flex items-center justify-center"
          data-testid="container"
        >
          3
        </div>
      </div>
      <div
        class="mx-auto flex-col flex relative w-28 xl:w-40 h-px overflow-hidden"
        data-testid="container"
      >
        <div
          class="mx-auto w-full flex-col flex absolute inset-0 bg-border opacity-50"
          data-testid="container"
        />
        <div
          class="mx-auto w-full flex-col flex absolute inset-0 bg-white transform transition-all duration-500 ease-out -translate-x-full"
          data-testid="container"
        />
      </div>
    </div>
    <div
      class="mx-auto w-full flex items-center flex-row"
      data-testid="container"
    >
      <div
        class="mx-auto flex-col flex items-center justify-center w-8 h-8 rounded-full font-bold transition-all duration-500 ease-in-out transform border text-muted-foreground"
        data-testid="container"
      >
        <div
          class="mx-auto w-full flex-col transition-all duration-500 ease-in-out flex items-center justify-center"
          data-testid="container"
        >
          4
        </div>
      </div>
      <div
        class="mx-auto flex-col flex relative w-28 xl:w-40 h-px overflow-hidden"
        data-testid="container"
      >
        <div
          class="mx-auto w-full flex-col flex absolute inset-0 bg-border opacity-50"
          data-testid="container"
        />
        <div
          class="mx-auto w-full flex-col flex absolute inset-0 bg-white transform transition-all duration-500 ease-out -translate-x-full"
          data-testid="container"
        />
      </div>
    </div>
    <div
      class="mx-auto w-full flex items-center flex-row"
      data-testid="container"
    >
      <div
        class="mx-auto flex-col flex items-center justify-center w-8 h-8 rounded-full font-bold transition-all duration-500 ease-in-out transform border text-muted-foreground"
        data-testid="container"
      >
        <div
          class="mx-auto w-full flex-col transition-all duration-500 ease-in-out flex items-center justify-center"
          data-testid="container"
        >
          5
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ProgressSteps - Snapshots > matches snapshot for ProgressSteps with single step 1`] = `
<div
  class="mx-auto w-full flex-col hidden lg:flex items-center gap-4 mt-1 flex-1 sticky top-0 z-10 bg-background"
  data-testid="container"
>
  <div
    class="mx-auto w-full flex items-center gap-0 flex-row"
    data-testid="container"
  >
    <div
      class="mx-auto w-full flex items-center flex-row"
      data-testid="container"
    >
      <div
        class="mx-auto flex-col flex items-center justify-center w-8 h-8 rounded-full font-bold transition-all duration-500 ease-in-out transform bg-foreground text-background"
        data-testid="container"
      >
        <div
          class="mx-auto w-full flex-col transition-all duration-500 ease-in-out flex items-center justify-center"
          data-testid="container"
        >
          1
        </div>
      </div>
    </div>
  </div>
</div>
`;
